all pages fixed + links added

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html class="html-main" lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="rtm-main/styles/main.css">
     <title>RTM Offer</title>
 </head>
-<body>
+<body class="body-main">
 <div id="main-menu" class="main__menu">
     <div class="main__menu-content">
         <div id="menu-close-btn" class="main__menu-content-close-btn-wrapper">
@@ -19,26 +19,26 @@
                 </svg>
             </div>
         </div>
-        <ul class="main__menu-content-list">
+        <div class="main__menu-content-list">
             <a href="../rtm-offer/rtm-price-list/price-list.html" class="main__menu-content-list-item">
                 Price list
                 <svg xmlns="http://www.w3.org/2000/svg" width="15" height="26" viewBox="0 0 15 26" fill="none">
                     <path d="M2.62402 2.5L13.124 13L2.62402 23.5" stroke="#777777" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
             </a>
-            <a class="main__menu-content-list-item">
+            <a href="" class="main__menu-content-list-item">
                 Bonus programme
                 <svg xmlns="http://www.w3.org/2000/svg" width="15" height="26" viewBox="0 0 15 26" fill="none">
                     <path d="M2.62402 2.5L13.124 13L2.62402 23.5" stroke="#777777" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
             </a>
-            <a class="main__menu-content-list-item">
+            <a href="" class="main__menu-content-list-item">
                 Contacts
                 <svg xmlns="http://www.w3.org/2000/svg" width="15" height="26" viewBox="0 0 15 26" fill="none">
                     <path d="M2.62402 2.5L13.124 13L2.62402 23.5" stroke="#777777" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
             </a>
-        </ul>
+        </div>
     </div>
 </div>
 <div class="main__container">
@@ -55,8 +55,8 @@
                 </div>
                 <a href="../rtm-offer/index.html"><p class="rtm__main-menu-logo">ReadyToMine</p></a>
                 <div class="rtm__main-menu-language-selector-wrapper">
-                    <div class="rtm__main-menu-language-selector rtm__main-menu-language-selector--active">En</div>
-                    <div class="rtm__main-menu-language-selector">Ru</div>
+                    <a href="" class="rtm__main-menu-language-selector rtm__main-menu-language-selector--active">En</a>
+                    <a href="" class="rtm__main-menu-language-selector">Ru</a>
                 </div>
             </div>
         </nav>
