styles generalized + offer page

--- a/rtm-asic/asic.html
+++ b/rtm-asic/asic.html
@@ -5,10 +5,11 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="../rtm-asic/styles/normalize.css">
     <link rel="stylesheet" href="../rtm-asic/styles/asic.css">
     <title>RTM Offer</title>
 </head>
-<body class="body-asic">
+<body class="body-main">
 <div id="page-asic-menu" class="page-asic__menu">
     <div class="page-asic__menu-content">
         <div id="menu-close-btn" class="page-asic__menu-content-close-btn-wrapper">
