--- a/rtm-search/search.html
+++ b/rtm-search/search.html
@@ -5,10 +5,11 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="../rtm-search/styles/normalize.css">
     <link rel="stylesheet" href="../rtm-search/styles/search.css">
     <title>Search your device</title>
 </head>
-<body class="body-search">
+<body class="body-main">
 <div id="page-menu" class="page__menu">
     <div class="page__menu-content">
         <div id="menu-close-btn" class="page__menu-content-close-btn-wrapper">
