--- a/rtm-algorithm-coin/algorithm-coin.html
+++ b/rtm-algorithm-coin/algorithm-coin.html
@@ -5,10 +5,11 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="../rtm-algorithm-coin/styles/normalize.css">
     <link rel="stylesheet" href="../rtm-algorithm-coin/styles/algorithm-coin.css">
     <title>RTM Offer</title>
 </head>
-<body class="body-algorithm">
+<body class="body-main">
 <div id="page-algo-menu" class="page-algo__menu">
     <div class="page-algo__menu-content">
         <div id="menu-close-btn" class="page-algo__menu-content-close-btn-wrapper">
