--- a/rtm-offer-page/offer.html
+++ b/rtm-offer-page/offer.html
@@ -1,39 +1,39 @@
 <!doctype html>
-<html class="html-main" lang="en">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="rtm-main/styles/normalize.css">
-    <link rel="stylesheet" href="rtm-main/styles/main.css">
+    <link rel="stylesheet" href="../rtm-offer-page/styles/normalize.css">
+    <link rel="stylesheet" href="../rtm-offer-page/styles/offer.css">
     <title>RTM Offer</title>
 </head>
-<body class="body-main">
-<div id="main-menu" class="main__menu">
-    <div class="main__menu-content">
-        <div id="menu-close-btn" class="main__menu-content-close-btn-wrapper">
-            <div class="main__menu-content-close-btn-image">
+<body class="body-offer">
+<div id="page-offer-menu" class="page-offer__menu">
+    <div class="page-offer__menu-content">
+        <div id="menu-close-btn" class="page-offer__menu-content-close-btn-wrapper">
+            <div class="page-offer__menu-content-close-btn-image">
                 <svg width="22" height="22" viewBox="0 0 22 22" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                     <path d="M1 0.646484L20.799 20.4455" stroke="currentColor" stroke-linecap="round"/>
                     <path d="M1 21.1523L20.799 1.35335" stroke="currentColor" stroke-linecap="round"/>
                 </svg>
             </div>
         </div>
-        <div class="main__menu-content-list">
-            <a href="../rtm-offer/rtm-price-list/price-list.html" class="main__menu-content-list-item">
+        <div class="page-offer__menu-content-list">
+            <a href="" class="page-offer__menu-content-list-item">
                 Price list
                 <svg xmlns="http://www.w3.org/2000/svg" width="15" height="26" viewBox="0 0 15 26" fill="none">
                     <path d="M2.62402 2.5L13.124 13L2.62402 23.5" stroke="#777777" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
             </a>
-            <a href="" class="main__menu-content-list-item">
+            <a href="" class="page-offer__menu-content-list-item">
                 Bonus programme
                 <svg xmlns="http://www.w3.org/2000/svg" width="15" height="26" viewBox="0 0 15 26" fill="none">
                     <path d="M2.62402 2.5L13.124 13L2.62402 23.5" stroke="#777777" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
             </a>
-            <a href="" class="main__menu-content-list-item">
+            <a href="" class="page-offer__menu-content-list-item">
                 Contacts
                 <svg xmlns="http://www.w3.org/2000/svg" width="15" height="26" viewBox="0 0 15 26" fill="none">
                     <path d="M2.62402 2.5L13.124 13L2.62402 23.5" stroke="#777777" stroke-linecap="round" stroke-linejoin="round"/>
@@ -42,11 +42,11 @@
         </div>
     </div>
 </div>
-<div class="main__container">
-    <header class="rtm__main-header">
-        <nav class="rtm__main-navbar">
-            <div class="rtm__main-menu-wrapper">
-                <div id="menu-button" class="rtm__main-menu-mobile">
+<div class="page-offer__container">
+    <header class="rtm__offer-header">
+        <nav class="rtm__offer-navbar">
+            <div class="rtm__offer-menu-wrapper">
+                <div id="menu-button" class="rtm__offer-menu-mobile">
                     <svg width="29" height="12" viewBox="0 0 29 12" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                         <path d="M1 1H27.6667" stroke="currentColor" stroke-width="1.66667" stroke-linecap="round"/>
                         <path d="M1 6H27.6667" stroke="currentColor" stroke-width="1.66667" stroke-linecap="round"/>
@@ -54,10 +54,10 @@
                     </svg>
                     Menu
                 </div>
-                <a href="../rtm-offer/index.html"><p class="rtm__main-menu-logo">ReadyToMine</p></a>
-                <div class="rtm__main-menu-language-selector-wrapper">
-                    <a href="" class="rtm__main-menu-language-selector rtm__main-menu-language-selector--active">En</a>
-                    <a href="" class="rtm__main-menu-language-selector">Ru</a>
+                <a href="" class="rtm__offer-menu-logo">ReadyToMine</a>
+                <div class="rtm__offer-menu-language-selector-wrapper">
+                    <a href="" class="rtm__offer-menu-language-selector rtm__offer-menu-language-selector--active">En</a>
+                    <a href="" class="rtm__offer-menu-language-selector">Ru</a>
                 </div>
             </div>
         </nav>
@@ -65,43 +65,41 @@
     <div class="container">
         <div class="slider js-slider">
             <div class="slide slide-1 active">
-                <div class="rtm__main-content-wrapper">
-                    <div class="rtm__main-logo rtm__main-logo--explore">
-                        <div class="rtm__main-logo-wrapper">
-                            <h1 class="rtm__main-logo-title">
-                                Explore
-                            </h1>
-                            <img src="rtm-main/assets/bitcoin.svg" alt="bitcoin title">
+                <div class="rtm__offer-content-wrapper">
+                    <h1 class="rtm__offer-title">
+                        Bitmain Antminer S19j Pro
+                    </h1>
+                    <div class="rtm__offer-blocks-wrapper">
+                        <div class="rtm__offer-blocks-group">
+                            <div class="rtm__offer-blocks-item rtm__offer-blocks-item--features"></div>
+                            <div class="rtm__offer-blocks-item rtm__offer-blocks-item--price"></div>
                         </div>
-                        <p class="rtm__main-logo-text">With ReadyToMine Team</p>
+                        <div class="rtm__offer-blocks-group">
+                            <div class="rtm__offer-blocks-item rtm__offer-blocks-item--roi"></div>
+                            <div class="rtm__offer-blocks-item rtm__offer-blocks-item--diagram"></div>
+                        </div>
+                        <div class="rtm__offer-blocks-item rtm__offer-blocks-item--payback"></div>
+                        <div class="rtm__offer-blocks-item rtm__offer-blocks-item--form"></div>
                     </div>
-                    <div class="rtm__main-logo rtm__main-logo--welcome">
-                        <img src="rtm-main/assets/welcome-logo.svg" alt="welcome logo svg">
-                    </div>
-                    <button class="rtm__main-btn">
-                        <a href="../rtm-offer/rtm-algorithm-coin/algorithm-coin.html" class="rtm__main-btn-text">
-                            Click to start
-                        </a>
-                    </button>
                 </div>
             </div>
         </div>
     </div>
 </div>
-<footer class="rtm__main-footer">
-    <p class="rtm__main-footer-copyright">2022 - 2023 Ready To Mine. All about mining equipment</p>
+<footer class="rtm__offer-footer">
+    <p class="rtm__offer-footer-copyright">2022 - 2023 Ready To Mine. All about mining equipment</p>
 </footer>
 <script>
-    const menu = document.querySelector('#main-menu');
+    const menu = document.querySelector('#page-offer-menu');
     const menuBtn = document.querySelector('#menu-button');
     const menuCloseBtn = document.querySelector('#menu-close-btn');
 
     menuBtn.addEventListener('click', () => {
-        menu.classList.add('main__menu--active')
+        menu.classList.add('page-offer__menu--active')
         document.body.classList.add('menu-active')
     });
     menuCloseBtn.addEventListener('click', () => {
-        menu.classList.remove('main__menu--active')
+        menu.classList.remove('page-offer__menu--active')
         document.body.classList.remove('menu-active')
     });
 </script>
