styles generalized + offer page

--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
         </div>
     </div>
 </div>
-<footer class="rtm__main-footer">
-    <p class="rtm__main-footer-copyright">2022 - 2023 Ready To Mine. All about mining equipment</p>
+<footer class="main__footer">
+    <p class="main__footer-copyright">2022 - 2023 Ready To Mine. All about mining equipment</p>
 </footer>
 <script>
     const menu = document.querySelector('#main-menu');
