--- a/rtm-electricity/electricity.html
+++ b/rtm-electricity/electricity.html
@@ -102,8 +102,8 @@
         </div>
     </div>
 </div>
-<footer class="rtm__electricity-footer">
-    <p class="rtm__electricity-footer-copyright">2022 - 2023 Ready To Mine. All about mining equipment</p>
+<footer class="main__footer">
+    <p class="main__footer-copyright">2022 - 2023 Ready To Mine. All about mining equipment</p>
 </footer>
 <script>
     const menu = document.querySelector('#main-menu');
